# Python-testing-Repo

./: README.md  pyproject.toml
src/: school.py  service.py  shapes.py
tests/: conftest.py  test_circle.py  test_my_functions.py  test_rectangle.py  test_school.py  test_service.py  test_square.py
